--- a/Presentacion/Views/Recursos/Delete.cshtml
+++ b/Presentacion/Views/Recursos/Delete.cshtml
@@ -1,26 +1,24 @@
 ﻿@model Dominio.Entidades.Recurso
 
 @{
-    ViewBag.Title = "Eliminar Recurso";
+    ViewBag.Title = "Eliminar recurso";
 }
 
-<h2>Eliminar Recurso</h2>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-<h3>¿Está seguro de que quiere eliminar este recurso?</h3>
-<fieldset>
-    <legend>Recurso</legend>
+        <h3 class="text-center">Eliminación de recurso</h3><hr />
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Nombre)
+        <h4 class="text-center">¿Está seguro de que quiere eliminar el recurso <strong>@Model.Nombre</strong>?</h4>
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <br/>
+            <p class="text-center">
+                <button class="btn btn-danger" type="submit">Eliminar</button>
+                @Html.BootstrapActionButton("Cancelar", "Index", new { @class="btn-default"})
+            </p>
+        }
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Nombre)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    <p>
-        @Html.ActionLink("Volver al listado", "Index", null, new { @class = "actionButton" })
-        <input type="submit" value="Eliminar" /> 
-    </p>
-}
+</div>
