--- a/Presentacion/Views/Recursos/Index.cshtml
+++ b/Presentacion/Views/Recursos/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Presentacion.Models.ListadoRecursosVM
 
 @{
-    ViewBag.Title = "Listado de Recursos";
+    ViewBag.Title = "Recursos";
 }
 
-<legend>Listado de Recursos</legend>
-
 <div class="row">
+
+    <h3 class="text-center">Recursos</h3><hr />
     <div class="col-md-9">
 
         <div class="row">
