--- a/Presentacion/Views/Usuarios/Index.cshtml
+++ b/Presentacion/Views/Usuarios/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Presentacion.Models.ListaUsuariosVM
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Usuarios";
 }
 
-<legend>Lista de usuarios</legend>
 <div class="row">
+    <h3 class="text-center">Usuarios</h3><hr/>
     <div class="col-md-9">
         <div class="row">
             <div class="col-md-12">
