--- a/Presentacion/Views/Recursos/Create.cshtml
+++ b/Presentacion/Views/Recursos/Create.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-        <h2 class="text-center">Crear recurso</h2>
+        <h3 class="text-center">Crear recurso</h3>
         <hr />
     </div>
     @using (Html.BeginForm())
@@ -16,7 +16,7 @@
             @Html.ValidationSummary(true)
 
             <!-- Codigo -->
-            <div class="form-group @(Html.ViewData.ModelState.IsValidField(Html.IdFor(model => model.Codigo).ToString()) ? null : "has-error")">
+            <div class="form-group">
                 @Html.BootstrapLabelFor(model => model.Codigo)
                 @Html.BootstrapTextBoxFor(model => model.Codigo)
                 @Html.BootstrapValidationMessageFor(model => model.Codigo)
