--- a/Presentacion/Views/Recursos/Details.cshtml
+++ b/Presentacion/Views/Recursos/Details.cshtml
@@ -1,58 +1,66 @@
 ﻿@model Dominio.Entidades.Recurso
 
 @{
-    ViewBag.Title = "Detalle";
+    ViewBag.Title = "Detalle de recurso";
 }
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <h3 class="text-center">Detalle de recurso</h3><hr />
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <dl class="dl-horizontal">
+                    <!-- Codigo -->
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Codigo)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Codigo)
+                    </dd>
 
-<h2>Detalles del recurso</h2>
+                    <!-- Nombre -->
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Nombre)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Nombre)
+                    </dd>
 
-<fieldset>
-    <legend>Recurso</legend>
+                    <!-- Tipo -->
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Tipo)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Tipo.Nombre)
+                    </dd>
 
-    <!-- Codigo -->
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Codigo)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Codigo)
-    </div>
+                    <!-- Descripcion -->
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Descripcion)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Descripcion)
+                    </dd>
 
-    <!-- Nombre -->
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Nombre)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Nombre)
-    </div>
+                    <!-- Caracteristicas -->
+                    @foreach (var caracteristica in Model.Caracteristicas)
+                    {
+                        <dt>
+                            @Html.DisplayFor(model => caracteristica.Tipo.Nombre)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => caracteristica.Valor)
+                        </dd>
+                    }
+                </dl>
+                <hr/>
+            </div>
 
-    <!-- Tipo -->
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Tipo)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Tipo.Nombre)
-    </div>
-
-    <!-- Descripcion -->
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Descripcion)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Descripcion)
-    </div>
-
-    <!-- Caracteristicas -->
-    @foreach (var caracteristica in Model.Caracteristicas)
-    {
-        <div class="display-label">
-            @Html.DisplayFor(model => caracteristica.Tipo.Nombre)
         </div>
-        <div class="display-field">
-            @Html.DisplayFor(model => caracteristica.Valor)
+        <div class="row">
+            <p class="text-center">
+                @Html.BootstrapActionButton("Volver", "Index", null, new { @class = "btn-default" })
+                @Html.BootstrapActionButton("Editar", "Edit", new { id = Model.Id }, new { @class = "btn-info" })
+            </p>
         </div>
-    }
-</fieldset>
-<p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }, new { @class = "actionButton littleButton" })
-    @Html.ActionLink("Volver al listado", "Index", null, new { @class = "actionButton littleButton" })
-</p>
+    </div>
+</div>
