--- a/Presentacion/Views/Reservas/Edit.cshtml
+++ b/Presentacion/Views/Reservas/Edit.cshtml
@@ -6,7 +6,8 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -15,34 +16,40 @@
 
         @Html.HiddenFor(model => model.Id)
 
+        <!-- Codigo del recurso -->
+        <div class="form-group">
+            <label class="control-label"> Codigo del recurso</label>
+            <div class="row">
+                <div class="col-md-7">
+                    @Html.BootstrapTextBoxFor(model => model.RecursoReservado)
+                    @Html.BootstrapValidationMessageFor(model => model.RecursoReservado)
+                </div>
+                <div class="col-md-5">
+                    @Html.BootstrapActionButton("Buscar recurso", "Buscar", "Recursos", new { ReturnUrl = Url.Action("EditForResource") }, new { @class = "btn-info" })
+                </div>
+            </div>
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.Inicio)
-        </div>
-        <div class="editor-field">
             @Html.EditorFor(model => model.Inicio)
             @Html.ValidationMessageFor(model => model.Inicio)
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Fin)
-        </div>
-        <div class="editor-field">
             @Html.EditorFor(model => model.Fin)
             @Html.ValidationMessageFor(model => model.Fin)
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.FechaCreacion)
-        </div>
-        <div class="editor-field">
             @Html.EditorFor(model => model.FechaCreacion)
             @Html.ValidationMessageFor(model => model.FechaCreacion)
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Descripcion)
-        </div>
-        <div class="editor-field">
             @Html.EditorFor(model => model.Descripcion)
             @Html.ValidationMessageFor(model => model.Descripcion)
         </div>
