--- a/Presentacion/Views/Reservas/FullList.cshtml
+++ b/Presentacion/Views/Reservas/FullList.cshtml
@@ -3,15 +3,11 @@
     ViewBag.Title = "Todas las reservas";
 }
 
-<legend>Todas las reservas</legend>
-
 <div class="row">
+    <div class="col-md-12">
+        <h3 class="text-center">Todas las reservas</h3><hr />
+    </div>
     <div class="col-md-9">
-        <div class="row">
-            <div class="col-md-12">
-
-            </div>
-        </div>
         @if (Model.ListaDeReservas.Any())
         {
             <table class="table table-hover table-bordered table-striped">
