Bug en creación y edición de reservas
Pendiente: bug para fechas en Chrome

--- a/Presentacion/Views/Recursos/Buscar.cshtml
+++ b/Presentacion/Views/Recursos/Buscar.cshtml
@@ -44,14 +44,14 @@
 
                     <!-- Fecha Inicio -->
                     <div class="form-group">
-                        @Html.BootstrapLabelFor(model => model.Inicio)
+                        <label class="control-label">Inicio disponibilidad</label>
                         @Html.BootstrapTextBoxFor(model => model.Inicio)
                         @Html.BootstrapValidationMessageFor(model => model.Inicio)
                     </div>
 
                     <!-- Fecha fin -->
                     <div class="form-group">
-                        @Html.BootstrapLabelFor(model => model.Fin)
+                        <label class="control-label">Fin disponibilidad</label>
                         @Html.BootstrapTextBoxFor(model => model.Fin)
                         @Html.BootstrapValidationMessageFor(model => model.Fin)
                     </div>
