--- a/Presentacion/Views/Reservas/Create.cshtml
+++ b/Presentacion/Views/Reservas/Create.cshtml
@@ -77,7 +77,7 @@
 
     <script type="text/javascript">
         $(function () {
-            $('#Inicio').datetimepicker({ format: 'd/m/Y H:i', inline: false });
+            $('#Inicio').datetimepicker({ format: 'd/m/Y H:i', inline: false, lang: 'es' });
             $('#Fin').datetimepicker({ format: 'd/m/Y H:i', inline: false });
         });
 
